Create endpoint for wildcard search